# vulkan-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: accelerationstructure.h  application.h  buffer.h  camera.h  devicememorymanager.h  image.h  light.h  logging.h  managedresource.h  material.h  mesh.h  raytracer.h  raytracingshaders.h  resourcecopyhandler.h  resourcetransferhandler.h  scene.h  shader.h  texture.h  utils.h  vulkan_headers.h
res/: CornellBox.gltf
shaders/: anyhit.rahit  bsdf.glsl  constants.glsl  emissive.rahit  emissive.rchit  emissive.rmiss  emissivepdf.rahit  geometry.glsl  hdr.glsl  hit.glsl  hit.rahit  hit.rchit  light.glsl  lightsample.glsl  material.glsl  maths.glsl  miss.rmiss  pass.rmiss  payload.glsl  random.glsl  raygen.rgen  sampling.glsl  shadow.rahit  shadow.rmiss  skybox.rmiss  spectral.glsl  texture.glsl
src/: accelerationstructure.cpp  application.cpp  buffer.cpp  camera.cpp  devicememorymanager.cpp  image.cpp  logging.cpp  main.cpp  managedresource.cpp  mesh.cpp  raytracer.cpp  raytracingshaders.cpp  resourcecopyhandler.cpp  resourcetransferhandler.cpp  scene.cpp  shader.cpp  texture.cpp  tiny_gltf_impl.cpp
